# excalibuhr

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/: ATM_PROFILE_molecfit.fits  limb_dark_coeff_u.npy  lines_u_redman.txt  lines_u_sarmiento.txt  marcs_grid.npy  sonora_PT_grid.npy
docs/: api.rst  conf.py  data.rst  getstarted.rst  index.rst  installation.rst  pipeline.rst  requirements.txt  utils.rst
docs/_build/doctrees/: api.doctree  data.doctree  environment.pickle  getstarted.doctree  index.doctree  installation.doctree  pipeline.doctree  utils.doctree
docs/_build/html/: .buildinfo  api.html  data.html  genindex.html  (+9 more)
docs/api/: excalibuhr.data.SPEC2D.rst  excalibuhr.utils.SpecConvolve_GL.rst  excalibuhr.utils.add_RBF_kernel.rst  excalibuhr.utils.add_local_kernel.rst  excalibuhr.utils.combine_frames.rst  excalibuhr.utils.detector_shotnoise.rst  excalibuhr.utils.extract_blaze.rst  excalibuhr.utils.extract_spec.rst  excalibuhr.utils.flat_fielding.rst  excalibuhr.utils.genline.rst  excalibuhr.utils.get_spline_model.rst  excalibuhr.utils.master_flat_norm.rst  excalibuhr.utils.measure_Gaussian_center.rst  excalibuhr.utils.remove_skylight.rst  excalibuhr.utils.remove_starlight.rst  excalibuhr.utils.spectral_rectify_interp.rst  excalibuhr.utils.util_master_flat.rst  excalibuhr.utils.wlen_solution.rst
examples/: run_pipeline.py
src/excalibuhr/: __init.py__  calib.py  data.py  grids.py  pipeline.py  plotting.py  retrieval.py  run.py  telluric.py  utils.py
src/excalibuhr.egg-info/: PKG-INFO  SOURCES.txt
(+116 files in other folders)
